--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -7,11 +8,14 @@ fonttools==4.53.1
 gemmi==0.6.6
 idna==3.7
 kiwisolver==1.4.5
+lxml==5.2.2
 matplotlib==3.9.1
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
@@ -19,5 +23,6 @@ requests==2.32.3
 scipy==1.14.0
 six==1.16.0
 soupsieve==2.5
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
