feat: update config structure

--- a/src/config.json
+++ b/src/config.json
@@ -4,8 +4,7 @@
     "mmcif_files" : "../data/mmcif_files",
     "validation_files": "../data/validation_files",
     "results_folder": "../results",
-    "mv_working_path": "../mv/MotiveValidator_1.1.23.12.27b",
-    "mv_results": "../mv/results",
+    "mv_folder": "../mv",
     "pq_working_path": "../pq/PatternQuery_1.1.23.12.27b",
     "pq_results": "../pq/results",
     "pq_structures": "../pq/structures",
