feat: update config

--- a/src/config.json
+++ b/src/config.json
@@ -5,9 +5,7 @@
     "validation_files": "../data/validation_files",
     "results_folder": "../results",
     "mv_folder": "../mv",
-    "pq_working_path": "../pq/PatternQuery_1.1.23.12.27b",
-    "pq_results": "../pq/results",
-    "pq_structures": "../pq/structures",
+    "pq_folder": "../pq",
     "dendrograms": "../img/dendrograms",
     "tanglegrams": "../img/tanglegrams",
     "categorization_results": "../results/categorization",
