--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ requests==2.32.3
 scipy==1.14.0
 six==1.16.0
 soupsieve==2.5
+tqdm==4.66.4
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
