--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,13 @@
-annotated-types==0.7.0
 beautifulsoup4==4.12.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-contourpy==1.2.1
-cycler==0.12.1
-fonttools==4.53.1
 gemmi==0.6.6
-idna==3.7
-kiwisolver==1.4.5
-lxml==5.2.2
-matplotlib==3.9.1
-numpy==2.0.0
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
+lxml
+matplotlib==3.7.3
+numpy==1.24.4
+pandas==2.0.3
 pydantic==2.8.2
-pydantic_core==2.20.1
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
 requests==2.32.3
-scipy==1.14.0
-six==1.16.0
-soupsieve==2.5
+scipy==1.10.0
 tqdm==4.66.4
 typing_extensions==4.12.2
-tzdata==2024.1
 urllib3==2.2.2
+pymol==2.4.1
