feat: update config.json with structures for test mode

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,6 @@
     "results_dir": "../results",
     "images_dir": "../img",
     "mv_dir": "../mv",
-    "pq_dir": "../pq"
+    "pq_dir": "../pq",
+    "pdb_ids_list": ["1gzt", "4d4u", "7khu", "9fa3", "5dzx"]
 }
