--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+beautifulsoup4==4.12.3
+lxml
 biopython==1.83
-rcsbsearchapi==1.6.0
+matplotlib==3.7.3
 gemmi==0.7.1
+rcsbsearchapi==1.6.0
+numpy==1.24.4
+pandas==2.0.3
+pydantic==2.8.2
+requests==2.32.3
+scipy==1.10.0
+tqdm==4.66.4
+typing_extensions==4.12.2
+urllib3==2.2.2
+
