--- a/src/old-data-config.json
+++ b/src/old-data-config.json
@@ -5,5 +5,6 @@
     "mv_dir": "/home/kaci/dp/old_data/mv",
     "pq_dir": "/home/kaci/dp/old_data/pq",
     "pdb_ids_list": [],
-    "skip_ids": []
+    "skip_ids": [],
+    "data_run": "2025-10-07T20-00-00"
 }
