--- a/web/fe/Dockerfile
+++ b/web/fe/Dockerfile
@@ -6,12 +6,12 @@ COPY package*.json /app/
 
 RUN npm install
 
-COPY ./ /app/
+COPY . .
 
 RUN npm run build
 
 FROM nginx:1.29.3
 
 # EXPOSE 8080
-COPY --from=build-stage /app/build/ /usr/share/nginx/html
+COPY --from=build-stage /app/dist/ /usr/share/nginx/html
 COPY --from=build-stage /app/nginx.conf /etc/nginx/conf.d/default.conf
