feat: update main python to 3.12.3

--- a/workflow/requirements.txt
+++ b/workflow/requirements.txt
@@ -1,15 +1,14 @@
 beautifulsoup4==4.12.3
 lxml
 biopython==1.83
-matplotlib==3.7.3
+matplotlib==3.10.8
 gemmi==0.7.1
-rcsbsearchapi==1.6.0
-numpy==1.24.4
-pandas==2.0.3
-pydantic==2.8.2
-requests==2.32.3
-scipy==1.10.0
-tqdm==4.66.4
-typing_extensions==4.12.2
-urllib3==2.2.2
-
+rcsb-api==1.5.0
+numpy==2.4.2
+pandas==3.0.0
+pydantic==2.12.5
+requests==2.32.5
+scipy==1.17.0
+tqdm==4.67.3
+typing_extensions==4.14.1
+urllib3==2.6.3
